# Kalibr

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  QUICK_TEST_GUIDE.md  README.md  RESUME_PARSING_STATUS.md  docker-compose.yml  test_resume_upload.sh
.github/workflows/: ci.yml
backend/: Dockerfile  celerybeat-schedule  pyproject.toml
backend/app/: __init__.py  config.py  db.py  exceptions.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: fingerprints.py  job.py  match.py  resume.py  rewrite.py
backend/app/routers/: alerts.py  applications.py  auth.py  auto_apply.py  cover_letters.py  interview_prep.py  match.py  resumes.py  rewrite.py  search.py  users.py
backend/app/services/: alert_service.py  apply_service.py  encryption_service.py  export_service.py  match_service.py  parse_service.py  rewrite_service.py  storage_service.py
backend/migrations/: 001_initial_schema.sql  002_resumes.sql
backend/scripts/: verify_storage.py
frontend/: .env.example  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.jsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/lib/: api.ts  auth.ts  firebase.ts
frontend/src/pages/: Alerts.jsx  Applications.jsx  AutoApply.jsx  Dashboard.jsx  Home.jsx  InterviewPrep.jsx  Login.tsx  ResumeDetail.jsx  ResumeUpload.jsx  Resumes.jsx  Rewrite.jsx  SavedJobs.jsx  Search.jsx  Settings.jsx  Settings.tsx
scripts/: validate-runtime.sh
workers/: celery_app.py
workers/tasks/: alerts.py  auto_apply.py  follow_up.py  parse.py  rewrite.py
(+2 files in other folders)
